--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aura/accept",
     "type": "library",
-    "description": "Provides content-negotiation tools using Accept-* headers.",
+    "description": "Provides content-negotiation tools using Accept* headers.",
     "keywords": [
         "request",
         "response"
