--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4.0"
     },
     "autoload": {
         "psr-4": {
@@ -28,8 +28,7 @@
         }
     },
     "require-dev": {
-        "aura/di": "~2.0",
-        "phpunit/phpunit": "~5.7 || ~4.8"
+        "yoast/phpunit-polyfills": "^1.0"
     },
     "autoload-dev": {
         "psr-4": {
