--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,14 @@
-<phpunit bootstrap="./phpunit.php">
+<?xml version="1.0"?>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         bootstrap="./phpunit.php"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+    <coverage processUncoveredFiles="true">
+        <include>
+            <directory suffix=".php">./src</directory>
+        </include>
+    </coverage>
     <testsuites>
-        <testsuite>
+        <testsuite name="Aura.Accept test suite">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
