Remove phpunit polyfill

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     },
     "require-dev": {
-        "yoast/phpunit-polyfills": "^1.0"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload-dev": {
         "psr-4": {
